--- a/modules/user/public/views/pages/profiles/2fa/create.liquid
+++ b/modules/user/public/views/pages/profiles/2fa/create.liquid
@@ -10,11 +10,12 @@ method: post
 
   function object = 'modules/user/commands/user/verify_otp', object: context.params.2fa, email: current_profile.user.email
   if object.valid
+    hash_assign current_profile['otp_configured'] = true
     function object = 'modules/user/commands/profiles/mark_otp', object: current_profile
     if object.valid != true
       log object, 'ERROR: modules/user/profiles/mark_otp'
     endif
-    include 'modules/core/helpers/redirect_to', url: '/', notice: 'app.2fa.create.success'
+    include 'modules/core/helpers/redirect_to', url: '/', notice: 'modules/user/2fa.create.success'
   else
     function user_otp = 'modules/user/queries/user/otp', email: current_profile.user.email
     render 'modules/user/2fa/setup', otp: user_otp.otp, errors: object.errors
