--- a/modules/user/public/views/pages/profiles/2fa/create.liquid
+++ b/modules/user/public/views/pages/profiles/2fa/create.liquid
@@ -15,7 +15,8 @@ method: post
     if object.valid != true
       log object, 'ERROR: modules/user/profiles/mark_otp'
     endif
-    include 'modules/core/helpers/redirect_to', url: '/', notice: 'modules/user/2fa.create.success'
+    assign notice = 'modules/user/2fa.create.success' | t
+    include 'modules/core/helpers/redirect_to', url: '/', notice: notice
   else
     function user_otp = 'modules/user/queries/user/otp', email: current_profile.user.email
     render 'modules/user/2fa/setup', otp: user_otp.otp, errors: object.errors
