--- a/modules/user/public/views/partials/2fa/disable.liquid
+++ b/modules/user/public/views/partials/2fa/disable.liquid
@@ -3,31 +3,30 @@
     {{ 'modules/user/2fa.disable.two_factor_authentication' | t }}
   </h2>
 
-  <form action="/profiles/2fa/delete" method="post">
-    <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
+  <section class="pos-user-content">
+    <form action="/profiles/2fa/delete" method="post" class="pos-form pos-form-simple">
+      <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
 
-    <h3 class="pos-heading-3 pos-2fa-spacing">
-      {{ 'modules/user/2fa.new.confirm_otp_code' | t }}
-    </h3>
-    <div>
-      {{ 'modules/user/2fa.new.please_confirm' | t }}
-    </div>
-
-    <input name="2fa[otp_code]" id="otp_code" type="text" pattern="\d{6,6}" maxlength="6" required autofocus autocomplete="off">
-    {% render 'modules/common-styling/forms/error_list', name: 'otp_code', errors: errors.otp_code %}
-
-    <div>
-        {{ 'modules/user/2fa.new.your_password' | t }}
-    </div>
-    <div>
+      <fieldset>
+        <label for="password">{{ 'modules/user/2fa.new.your_password' | t }}</label>
         <input name="2fa[password]" type="password" id="password" required>
         {% render 'modules/common-styling/forms/error_list', name: 'password', errors: errors.password %}
-    </div>
+      </fieldset>
 
-    <div>
-      <button type="submit" class="submit-2fa pos-button pos-button-primary">
-        {{ 'modules/user/2fa.new.submit' | t }}
-      </button>
-    </div>
-  </form>
+      <h3 class="pos-heading-3 pos-2fa-spacing">
+        {{ 'modules/user/2fa.new.confirm_otp_code' | t }}
+      </h3>
+      <fieldset>
+        <label for="otp_code">{{ 'modules/user/2fa.new.please_confirm' | t }}</label>
+        <input name="2fa[otp_code]" id="otp_code" type="text" pattern="\d{6,6}" maxlength="6" required autofocus autocomplete="off">
+        {% render 'modules/common-styling/forms/error_list', name: 'otp_code', errors: errors.otp_code %}
+      </fieldset>
+
+      <div>
+        <button type="submit" class="submit-2fa pos-button pos-button-primary">
+          {{ 'modules/user/2fa.new.submit' | t }}
+        </button>
+      </div>
+    </form>
+  </section>
 </div>
