--- a/modules/user/public/views/pages/passwords/reset.liquid
+++ b/modules/user/public/views/pages/passwords/reset.liquid
@@ -1,1 +1,1 @@
-{% render 'modules/user/passwords/reset', context: context %}
+{% render 'modules/user/passwords/reset', context: context, values: null %}
