--- a/modules/user/public/lib/commands/session/create.liquid
+++ b/modules/user/public/lib/commands/session/create.liquid
@@ -34,7 +34,7 @@
   function object = 'modules/user/commands/session/create/check', object: object
   if object.valid
     function user = 'modules/user/queries/user/load', id: object.id
-    function profile = 'modules/user/queries/profiles/find', user_id: user.id
+    function profile = 'modules/user/queries/profiles/find', user_id: user.id, id: null, uuid: null, first_name: null, last_name: null
     if profile.otp_configured and skip_otp == false
         hash_assign object['otp_required'] = true
     else
