--- a/modules/user/public/lib/queries/profiles/find.liquid
+++ b/modules/user/public/lib/queries/profiles/find.liquid
@@ -4,7 +4,7 @@
     return nil
   endif
 
-  graphql result = 'modules/user/profiles/search', user_id: user_id, id: id, first_name: first_name, last_name: last_name, uuid: uuid, with_profile_cover: true, limit: 1, page: 1
+  graphql result = 'modules/user/profiles/search', user_id: user_id, id: id, first_name: first_name, last_name: last_name, uuid: uuid, limit: 1, page: 1
   assign profile = result.records.results.first
 
   if profile
