--- a/modules/user/public/lib/queries/user/search.liquid
+++ b/modules/user/public/lib/queries/user/search.liquid
@@ -2,6 +2,6 @@
   assign limit = limit | default: 20
   assign page = page | to_positive_integer: 1
 
-  graphql r = 'modules/user/user/search', id: id, not_ids: not_ids, email: email, role: role, roles: roles, page: page, limit: limit, sort: sort
+  graphql r = 'modules/user/user/search', id: id, not_ids: not_ids, email: email, page: page, limit: limit, sort: sort
   return r.users
 %}
