--- a/modules/user/public/views/pages/users/create.liquid
+++ b/modules/user/public/views/pages/users/create.liquid
@@ -7,7 +7,7 @@ slug: users
   
   include 'modules/user/helpers/can_do_or_redirect', requester: current_profile, do: 'users.register', redirect_url: "/"
 
-  function object = 'modules/user/commands/user/create', first_name: params.first_name, last_name: params.last_name, email: params.email, password: params.password, hook_params: params
+  function object = 'modules/user/commands/user/create', first_name: params.first_name, last_name: params.last_name, email: params.email, password: params.password, hook_params: params, roles: null
   if object.valid
     function _ = 'modules/user/commands/session/create', user_id: object.id, validate_password: false, email: null, password: null, hook_params: null
     include 'modules/core/helpers/redirect_to'
