--- a/modules/user/public/views/partials/passwords/new.liquid
+++ b/modules/user/public/views/partials/passwords/new.liquid
@@ -15,8 +15,7 @@ metadata:
   <h1 class="pos-heading-2">{{ 'modules/user/passwords.edit' | t }}</h1>
 
   <form action="/passwords" method="POST" class="pos-form pos-form-simple">
-
-    {% render 'modules/core/helpers/authenticity_token', context: context %}
+    <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
 
     <fieldset>
       <label for="pos-user-password">{{ 'modules/user/passwords.new_password' | t }}</label>
