--- a/modules/user/public/views/pages/profiles/2fa/create.liquid
+++ b/modules/user/public/views/pages/profiles/2fa/create.liquid
@@ -18,7 +18,7 @@ method: post
     assign notice = 'modules/user/2fa.create.success' | t
     include 'modules/core/helpers/redirect_to', url: '/', notice: notice
   else
-    function user_otp = 'modules/user/queries/user/otp', email: current_profile.user.email
-    render 'modules/user/2fa/setup', otp: user_otp.otp, errors: object.errors
+    function user_otp = 'modules/user/queries/user/otp', email: current_profile.user.email, name: null
+    render 'modules/user/2fa/setup', otp: user_otp.otp, errors: object.errors, object: object
   endif
 %}
