--- a/modules/user/public/views/pages/profiles/2fa/new.liquid
+++ b/modules/user/public/views/pages/profiles/2fa/new.liquid
@@ -4,7 +4,7 @@
     redirect_to '/'
   endif
 
-  function user_otp = 'modules/user/queries/user/otp', email: current_profile.user.email, roles: null
+  function user_otp = 'modules/user/queries/user/otp', email: current_profile.user.email, name: null
 
-  render 'modules/user/2fa/setup', otp: user_otp.otp
+  render 'modules/user/2fa/setup', otp: user_otp.otp, object: null, errors: null
 %}
