Fix platformos check errors

--- a/modules/common-styling/public/views/partials/init.liquid
+++ b/modules/common-styling/public/views/partials/init.liquid
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-table.css' | asset_url }}">
 <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-tag.css' | asset_url }}">
 
-<script src="{{ 'modules/common-styling/js/pos.js' | asset_url }}"></script>
+<script src="{{ 'modules/common-styling/js/pos.js' | asset_url }}" async></script>
 
 <script>
 
