2FA one time passwords (#76)
* Migrate 2fa from marketplace template

* Module version

* OTP

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Disabling OTP

* Cleanup

* Change email

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Test translations fix

* Platformos check fixes

* Fixes part 2

* Fix errors

* Fix platformos check errors

* Fixes

* Remove call to current profile helper from layout

* 2FA documentation

* Readme

* Readme fix

--- a/app/views/pages/admin/index.liquid
+++ b/app/views/pages/admin/index.liquid
@@ -4,7 +4,7 @@
   include 'modules/user/helpers/can_do_or_unauthorized', requester: current_profile, do: 'admin.read', redirect_anonymous_to_login: true
   # platformos-check-enable UnreachableCode
 
-  function users = 'modules/user/queries/user/search', id: null, not_ids: null, email: null, role: null, roles: null, sort: null, limit: 20
+  function users = 'modules/user/queries/user/search', id: null, not_ids: null, email: null, sort: null, limit: 20
 
   render 'admin/home/index', users: users
 %}
