--- a/modules/user/public/lib/commands/session/create.liquid
+++ b/modules/user/public/lib/commands/session/create.liquid
@@ -10,10 +10,16 @@
       the user's password
     - hook_params: object
       the other params that will be passed to hook_user_login
+    - skip_otp boolean
+      default: false
 {% endcomment %}
 {% liquid
   if validate_password == nil
     assign validate_password = true
+  endif
+
+  if skip_otp == nil
+    assign skip_otp = false
   endif
 
   if validate_password
@@ -28,16 +34,21 @@
   function object = 'modules/user/commands/session/create/check', object: object
   if object.valid
     function user = 'modules/user/queries/user/load', id: object.id
-    if user.id
-      sign_in user_id: user.id
-      assign params = '{}' | parse_json | hash_merge: user: user, hook_params: hook_params
-      function results = 'modules/core/commands/hook/fire', hook: 'user_login', params: params, merge_to_object: true
-      hash_assign user['hook_results'] = results
-    endif
-    hash_assign object['user'] = user
+    function profile = 'modules/user/queries/profiles/find', user_id: user.id, id: null, uuid: null, first_name: null, last_name: null
+    if profile.otp_configured and skip_otp == false
+        hash_assign object['otp_required'] = true
+    else
+      if user.id
+        sign_in user_id: user.id
+        assign params = '{}' | parse_json | hash_merge: user: user, hook_params: hook_params
+        function results = 'modules/core/commands/hook/fire', hook: 'user_login', params: params, merge_to_object: true
+        hash_assign user['hook_results'] = results
+      endif
+      hash_assign object['user'] = user
 
-    assign event_payload = null | hash_merge: user_id: object.id
-    function _ = 'modules/core/commands/events/publish', type: 'user_signed_in', object: event_payload, delay: null, max_attempts: null
+      assign event_payload = null | hash_merge: user_id: object.id
+      function _ = 'modules/core/commands/events/publish', type: 'user_signed_in', object: event_payload, delay: null, max_attempts: null
+    endif
   endif
 
   return object
