--- a/app/views/pages/profile/update.liquid
+++ b/app/views/pages/profile/update.liquid
@@ -5,7 +5,7 @@ slug: profile/update
 {% liquid
     function current_profile = 'modules/user/helpers/current_profile'
     # platformos-check-disable UnreachableCode
-    include 'modules/user/helpers/can_do_or_unauthorized', requester: current_profile, do: 'profile.manage', redirect_anonymous_to_login: true
+    include 'modules/user/helpers/can_do_or_unauthorized', requester: current_profile, do: 'profile.manage', redirect_anonymous_to_login: true, forbidden_partial: 'modules/user/components/pages/403'
     # platformos-check-enable UnreachableCode
   
     function object = 'modules/user/commands/profiles/update', object: params, profile: current_profile
